<resources>
    <string name="app_name">Presente!</string>
    <string name="student_name">Integrantes:\nMateus Oliveira\nSamuel Vinícius da Luz</string>
    <string name="eventos">Eventos</string>
    <string name="usuarios">Usuários</string>
    <string name="sobre">Sobre</string>
    <string name="botao_retornar">Retornar</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="botao_registrar">Registrar</string>
    <string name="botao_novo">Novo</string>
    <string name="botao_excluir">EXCLUIR</string>
    <string name="cadastro_eventos">Cadastro de Eventos</string>
    <string name="cadastro_usuarios">Cadastro de Usuários</string>
    <string name="eventos_passados">Eventos Passados</string>
    <string name="eventos_futuros">Eventos Futuros</string>
    <string name="aluno">Aluno: Samuel Vinícius da Luz</string>
    <string name="curso">Curso: Tecnologia em Análise e Desenvolvimento de Sistemas</string>
    <string name="explicacao">Presente é um aplicativo de fácil uso para registro de presenças nos eventos.\nCom ele você pode criar de forma rápida os eventos e realizar o cadastro nos eventos.\nPara registra a presença, basta preencher com o seu CPF, para dar a entrada e a saída.</string>

    <!-- Hints -->
    <!-- Eventos -->
    <string name="hint_data">Data do Evento</string>
    <string name="hint_inicio">Horário\nInício</string>
    <string name="hint_final">Horário\nEncerramento</string>
    <string name="hint_participacao">Participação (% ou hh:mm)</string>
    <!-- Usuários -->
    <string name="hint_nome">Nome</string>
    <string name="hint_descrcao">Descrição</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_pesquisar">Pesquisar</string>
    <!-- Presença -->
    <string name="hint_presenca">Presença</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem
    </string>
</resources>