<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:backgroundTintMode="src_in"
            android:elevation="2dp"
            android:padding="16dp"
            android:text="@string/cadastro_eventos"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNomeEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:hint="@string/hint_nome"
            android:inputType="text"
            android:padding="12dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:hint="@string/hint_descrcao"
            android:inputType="text"
            android:padding="12dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:hint="@string/hint_data"
            android:inputType="date"
            android:padding="12dp"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextInicio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/hint_inicio"
                android:inputType="datetime|time"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextFinal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/hint_final"
                android:inputType="datetime|time"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextParticipacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:hint="@string/hint_participacao"
            android:inputType="text"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cadastrar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/botao_cadastrar"
            android:textColor="@color/cortextobotao"
            app:cornerRadius="12dp"
            app:strokeColor="#B0BEC5"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_retornar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_retornar"
            android:textColor="@color/cortextobotao"
            app:cornerRadius="12dp"
            app:strokeColor="#B0BEC5"
            app:strokeWidth="1dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>