<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:backgroundTint="@color/fundotitulo"
            android:backgroundTintMode="src_in"
            android:elevation="2dp"
            android:padding="16dp"
            android:text="@string/usuarios"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNewEvent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="top|end"
            android:layout_marginBottom="10dp"
            android:text="@string/botao_novo"
            android:textColor="@color/cortextobotao"
            app:backgroundTint="@color/botao"
            app:cornerRadius="12dp"
            app:strokeColor="#B0BEC5"
            app:strokeWidth="1dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerEventosPassados"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@color/fundolista"
                    android:backgroundTintMode="src_over" />

            </LinearLayout>
        </ScrollView>

        <EditText
            android:id="@+id/editTextPesquisar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/lupa"
            android:hint="@string/hint_pesquisar"
            android:inputType="text"
            android:padding="12dp"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/botao_retornar"
            android:textColor="@color/cortextobotao"
            app:backgroundTint="@color/botao"
            app:cornerRadius="12dp"
            app:strokeColor="#B0BEC5"
            app:strokeWidth="1dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>